Style desktop design fixes and spacing adjustments

--- a/style.css
+++ b/style.css
@@ -52,11 +52,37 @@
 
 body {
   font-family: "League Spartan", Arial, Helvetica, sans-serif;
-
-  /* 4. Add accessible line-height */
   line-height: 1.5;
-  /* 5. Improve text rendering */
   -webkit-font-smoothing: antialiased;
+
+  /* Background images */
+  background-image:
+    url('images/bg-pattern-top-mobile.svg'),
+    url('images/bg-pattern-bottom-mobile.svg');
+  background-repeat: no-repeat, no-repeat;
+  background-position:
+    top left,
+    bottom right;
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    background-image:
+      url('images/bg-pattern-top-desktop.svg'),
+      url('images/bg-pattern-bottom-desktop.svg');
+    background-repeat: no-repeat, no-repeat;
+    background-position:
+      top left,
+      bottom right;
+  }
+}
+
+@media screen and (min-width: 1110px) {
+  body {
+    height: 100vh;
+    display: grid;
+    place-content: center;
+  }
 }
 
 /* 6. Improve media defaults */
@@ -262,6 +288,7 @@ h1, h2, h3, h4, h5, h6 {
     height: 256px;
     grid-template-columns: 1fr 1fr 1fr;
     row-gap: 0;
+    column-gap: 32px;
   }
 
   .testimonial {
